--- a/Home.html
+++ b/Home.html
@@ -23,7 +23,12 @@
         <p>Awards</p>
         <p>About</p>
       </div>
-      <button>Get in touch</button>
+      <div class="head-Button">
+        <button>Get in touch</button>
+      </div>
+      <div class="img">
+        <img src="/Assets/Hamburger Menu.svg" alt="" />
+      </div>
     </header>
     <div class="main">
       <h1>Helping companies build better, scalable software.</h1>
@@ -32,6 +37,64 @@
         experience with Fortune 500 companies like Apple, Google, Facebook, and
         more.
       </p>
+    </div>
+    <div class="logos">
+      <img src="/Assets/Logos/Walmart.svg" alt="" />
+      <img src="/Assets/Logos/JP Morgan.svg" alt="" />
+      <img src="/Assets/Logos/Visa.svg" alt="" />
+      <img src="/Assets/Logos/Tinder.svg" alt="" />
+      <img src="/Assets/Logos/Samsung.svg" alt="" />
+      <img src="/Assets/Logos/Verizon.svg" alt="" />
+    </div>
+    <div class="section-1">
+      <div class="left">
+        <img src="/Assets/Spense.png" alt="" />
+        <div class="text">
+          <h1>Spense.com &rarr;</h1>
+          <p>
+            Rethinking the way writers get paid, an open-source platform
+            designed to help writers focus more on writing, and less on when and
+            how they'll get paid. Project in collaboration with Codewell.cc
+          </p>
+        </div>
+      </div>
+      <div class="right">
+        <img src="/Assets/YelpCamp.png" alt="" />
+        <div class="text">
+          <h1>YelpCamp.com &rarr;</h1>
+          <p>
+            Allowing backpack travelers to perfectly plan their trip through an
+            open-source platform similar to TripAdvisor. With over 1m MAU,
+            YelpCamp has been the crowd's favorite in 2021.
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="section-2">
+      <div class="one">
+        <h2>A co-founder at one of the world's largest communities.</h2>
+        <p>
+          The combined experience I have working at the top Fortune 500
+          companies has allowed me to developer a skillset that helps me in not
+          just development, but in every aspect of any business
+        </p>
+        <p>
+          I'm proud to announce that I am now working at one of the world's
+          largest communities teaching young minds about how to sell yourself as
+          a developer and open them to a whole new world of opportunities.
+        </p>
+      </div>
+      <div class="two">
+        <p>
+          As a developer, you have everything available to you and all that's
+          holding you back is yourself.
+        </p>
+        <p>A quote I live by perfectly illustrates what I mean.</p>
+        <p>
+          I'm happy to chat over coffee some time about how I can help your
+          company.
+        </p>
+      </div>
     </div>
   </body>
 </html>
